feat: project 1 almost done

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,27 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+out/production/cs-gy-6643-computer-vision/project_1/allblack.bmp
+out/production/cs-gy-6643-computer-vision/project_1/allblack_out.bmp
+out/production/cs-gy-6643-computer-vision/project_1/data13_out.bmp
+out/production/cs-gy-6643-computer-vision/project_1/fruits2b_out.bmp
+out/production/cs-gy-6643-computer-vision/project_1/tiger1_out.bmp
+out/production/cs-gy-6643-computer-vision/new.bmp
+out/production/cs-gy-6643-computer-vision/new.bmp
+src/project_1/allblack.bmp
+src/project_1/allblack_out.bmp
+src/project_1/data13_out.bmp
+src/project_1/fruits2b_out.bmp
+src/project_1/tiger1_out.bmp
+out/production/cs-gy-6643-computer-vision/new.bmp
+src/project_1/allblack.bmp
+src/project_1/allblack_out.bmp
+src/project_1/data13_out.bmp
+src/project_1/fruits2b_out.bmp
+src/project_1/tiger1_out.bmp
+out/production/cs-gy-6643-computer-vision/new.bmp
+src/project_1/tiger1_out.bmp
+src/project_1/fruits2b_out.bmp
+src/project_1/data13_out.bmp
+src/project_1/allblack_out.bmp
+src/project_1/allblack.bmp
