chore: tidy .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -27,21 +27,10 @@ out/production/cs-gy-6643-computer-vision/project_1/data13_out.bmp
 out/production/cs-gy-6643-computer-vision/project_1/fruits2b_out.bmp
 out/production/cs-gy-6643-computer-vision/project_1/tiger1_out.bmp
 out/production/cs-gy-6643-computer-vision/new.bmp
-out/production/cs-gy-6643-computer-vision/new.bmp
 src/project_1/allblack.bmp
 src/project_1/allblack_out.bmp
 src/project_1/data13_out.bmp
 src/project_1/fruits2b_out.bmp
 src/project_1/tiger1_out.bmp
-out/production/cs-gy-6643-computer-vision/new.bmp
-src/project_1/allblack.bmp
-src/project_1/allblack_out.bmp
-src/project_1/data13_out.bmp
-src/project_1/fruits2b_out.bmp
-src/project_1/tiger1_out.bmp
-out/production/cs-gy-6643-computer-vision/new.bmp
-src/project_1/tiger1_out.bmp
-src/project_1/fruits2b_out.bmp
-src/project_1/data13_out.bmp
-src/project_1/allblack_out.bmp
-src/project_1/allblack.bmp
+.DS_Store
+
